# silicon-to-software

./: .gitignore
cpp/: CMakeLists.txt  full_cpp.ld  init.cpp  main.cpp  toolchain.cmake
io/: CMakeLists.txt  init.cpp  link-io.ld  main.cpp  toolchain.cmake
io/include/: gpio.hpp  sys_tick.hpp  system_control.hpp
runnable/: CMakeLists.txt  link-basic.ld  runnable.cpp
trivial/: CMakeLists.txt  trivial.cpp
